# itseez-ws-2016-practice

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  test_results.xlsx
docs/: practice1-development-tools.md  practice2-profiling-and-benchmarking.md  practice3-memory.md  practice4-compiler.md  practice5-fixed-point.md  practice6-simd.md
include/: retro_filter.hpp  skeleton_filter.hpp
perf/: CMakeLists.txt  perf_skeleton.cpp  test_main.cpp
sample/: CMakeLists.txt  retro_sample.cpp  skeleton.cpp
src/: CMakeLists.txt  convertcolor.cpp  internal.hpp  resize.cpp  retro_filter.cpp  skeleton_filter.cpp  thinning.cpp
test/: CMakeLists.txt  test_skeleton.cpp
